<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/menu_schedule"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_colleagues"
            android:icon="@drawable/ic_baseline_elderly_24"
            android:title="@string/menu_colleagues"/>
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/menu_salary"/>



    </group>
</menu>