<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.datwhite.simedlk.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.datwhite.simedlk.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.datwhite.simedlk.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.datwhite.simedlk.ui.profile.ProfileFragment"
        android:label="Профиль"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.datwhite.simedlk.ui.activity.ActivityFragment"
        android:label="Активность"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/nav_colleagues"
        android:name="com.datwhite.simedlk.ui.colleagues.ColleaguesFragment"
        android:label="Коллеги"
        tools:layout="@layout/fragment_colleagues" />
    <fragment
        android:id="@+id/nav_add_patient"
        android:name="com.datwhite.simedlk.ui.patient.AddPatient"
        android:label="Пациент"
        tools:layout="@layout/fragment_add_patient"/>

    <action android:id="@+id/EditProfileFragment"
        app:destination="@id/nav_profile"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <action android:id="@+id/WatchColleagueProfile"
        app:destination="@id/nav_colleagues"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <action android:id="@+id/addPatientFromSchedule"
        app:destination="@id/nav_add_patient"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

</navigation>